--- a/lib/painless_web/live/tenancy_live/show.html.heex
+++ b/lib/painless_web/live/tenancy_live/show.html.heex
@@ -1,6 +1,6 @@
 <.header>
-  Tenancy <%= @tenancy.id %>
-  <:subtitle>This is a tenancy record from your database.</:subtitle>
+  <%= @tenancy.name %> - <%= @tenancy.property %>
+  <:subtitle>This is a tenancy record <%= @tenancy.id %> from your database.</:subtitle>
   <:actions>
     <.link :for={ledger <- @tenancy.ledgers} patch={~p"/tenancies/#{@tenancy}/ledgers/#{ledger}/entries/new"}>
       <.button>New <%= ledger.acct_type %> Entry</.button>
@@ -23,6 +23,13 @@
 </.list>
 
 <.back navigate={~p"/tenancies"}>Back to tenancies</.back>
+
+<.live_component
+  module={PainlessWeb.TenancyLive.CombinedEntries}
+  id={@tenancy.id}
+  tenancy={@tenancy}
+  entries={@entries}
+/>
 
 <%= if @live_action in [:edit] do %>
   <.modal id="tenancy-modal" show on_cancel={JS.patch(~p"/tenancies/#{@tenancy}")}>
