fine tune the entry form

--- a/lib/painless_web/live/entry_live/index.html.heex
+++ b/lib/painless_web/live/entry_live/index.html.heex
@@ -50,6 +50,7 @@
     title={@page_title}
     action={@live_action}
     entry={@entry}
+    tenancy={@tenancy}
     patch={~p"/tenancies/#{@tenancy}/entries"}
   />
 </.modal>
